# solo

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT-GUIDE.md  BUILD_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  HANDOVER.md  PUBLISH_GUIDE.md  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  RELEASE-CHECKLIST.md  RELEASE_PROCESS.md  SECURITY.md  SOLO_BUILD_PROMPT.md  TROUBLESHOOTING.md  _diag.ts  index.html  launch-dev.bat  package-lock.json  package.json  settings-audit-report.md  slash-command-bug-investigation.md  solo_1.2.22_x64-setup.sig  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.opencode/: PROFILE.md  project-context.jsonc
design-samples/: solo-command-palette.html  solo-outline-position.html  solo-outline-statusbar.html  solo-outline-trigger-topbar.html  solo-outline-triggers.html  solo-typography-sample.html
docs/: ARCHITECTURE.md  EDITOR_INPUT_SCENARIOS.md  ENGINEERING_STANDARDS.md  INDEX.md  KNOWN-ISSUES.md  PLAYBOOK.md  README.md  REMEDIATION_PLAN.md  SEMANTIC_EDITOR_MODEL.md  architecture：产品开发总原则.md  cjk-boundary.md  debugging.md  defect-hotspots.md  network-proxy-guide.md  project_rules：工作原则和纪律.md  solo-tour.html  solo产品精神.md  (+1 more)
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json  main-window.json  secondary-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  menu.rs  models.rs  proxy.rs  state.rs  updater.rs
src-tauri/src/commands/: clipboard.rs  desktop.rs  document.rs  font.rs  image.rs  mod.rs  window.rs
(+205 files in other folders)
