[package]
name = "solo"
version = "1.2.13"
description = "solo - A lightweight Markdown editor"
authors = ["luoxiaodou"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "solo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-cli = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tauri-plugin-store = "2.4.3"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2.4.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
webview2-com = "0.38.2"
windows-core = "0.61"

[profile.release]
# 以响应速度为核心，编译质量优先
opt-level = 3
